--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "titmouse",
   "version": "0.0.1",
-  "description": "titmouse",
+  "description": "A TUI tool for reviewing AWS CodeCommit pull requests in the terminal",
   "type": "module",
   "bin": {
     "titmouse": "./dist/cli.js"
@@ -12,7 +12,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "bun build ./src/cli.tsx --outdir ./dist --target node && bun build ./src/index.ts --outdir ./dist --target node && tsc --emitDeclarationOnly",
+    "build": "bun build ./src/cli.tsx --outdir ./dist --target node --external react-devtools-core && bun build ./src/index.ts --outdir ./dist --target node --external react-devtools-core && tsc --emitDeclarationOnly",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
@@ -39,7 +39,27 @@
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/watany-dev/titmouse.git"
+  },
+  "homepage": "https://github.com/watany-dev/titmouse#readme",
+  "bugs": {
+    "url": "https://github.com/watany-dev/titmouse/issues"
+  },
+  "keywords": [
+    "aws",
+    "codecommit",
+    "pull-request",
+    "tui",
+    "cli",
+    "code-review",
+    "terminal",
+    "ink"
+  ],
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-codecommit": "^3.989.0",
