--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,9 @@ on:
     tags:
       - 'v*.*.*'
 
-permissions: {}
+permissions:
+  contents: read
+  id-token: write
 
 jobs:
   validate:
@@ -80,6 +82,7 @@ jobs:
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: '24'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install latest npm for OIDC support
         run: npm install -g npm@latest
